# torch-gcu

./: .clang-format  .clang-format-ignore  .gitignore  .opst.sh.in  CMakeLists.txt  LICENSE  README.md  README_zh.md  build_utils.py  generate_code.sh  install_deps.sh  requirements.txt  setup.py  workaround_records.md
.github/workflows/: ci.yml
.pipeline/: build.sh
cmake/: TorchGCUConfig.cmake.in  TorchGCUConfigVersion.cmake.in  bfloat16.cmake  jsoncpp.cmake  torch_archive.cmake
codegen/: gcu_native_functions.yaml  gcu_op_fallback.yaml  gcu_vision_functions.yaml  gen_GCUNativeFunctions_methods.py  gen_aot_ops.py  gen_backend_stubs.py  gen_op_class.py  gen_op_fallback_register.py  gen_structured.py  gen_topsaten_bridge.py  gen_yaml.py  readme  run.sh  vision_native_functions.yaml  wrapper_torch_codegen.py
codegen/templates/: GCUNativeFunctions.cpp  Operators.h  aot_ops.cpp  aot_ops.h  empty_template.cpp  foreach_op_utils.h  shape_infer_func.h  structured_shape_infer.h  topsaten_bridge.h  topsaten_ops.h
githooks/: pre-commit
manuals/: conf.py  index.rst
manuals/_static/css/: custom.css
manuals/oplist_torch_gcu/: .owners  Makefile
manuals/oplist_torch_gcu/content/source/: conf.py  index.rst  statement.rst  torch_gcu_op.rst
manuals/user_guide/: .owners  doc.mk
manuals/user_guide/content/source/: conf.py  index.rst  libtorch_gcu.rst  statement.rst  torch_gcu_amp.rst  torch_gcu_custom_op.rst  torch_gcu_distributed_support.rst  torch_gcu_gcu_graph.rst  torch_gcu_memory.rst  torch_gcu_op_debug.rst  torch_gcu_profiler.rst  torch_gcu_python_suppport.rst  torch_gcu_stream.rst  torch_gcu_user_guide.rst  transfer_to_gcu.rst
scripts/: code_format_check_list  install_env.sh  uninstall_env.sh
test/: install_driver.sh  install_env.sh  run_all_test.sh
test/cuda/: test_base_api.py
test/libtorch_gcu/: CMakeLists.txt  gen_resnet50.py  test_resnet50.cc
test/op_test/: gcu_op_test.py  test_binary_ops.py  test_convolution.py  test_linear.py
tools/: get_support_torch_cuda_api.py  get_topsaten_op_decl.py  gpu_dist_profiler_merge.py  parse_torch_gcu_memory_log.py  text_extraction.py  tops_vpd_data_process.py  torch_hbm_monitor.py
tools/inductor_analysis/: __init__.py  compile_fx.py  profile.py
torch_gcu/: __init__.py  debug_from_op_statistic.py  transfer_to_gcu.py  transfer_to_gcu_legacy.py
torch_gcu/csrc/: InitGcuBindings.cpp  torch_gcu.h
torch_gcu/csrc/aotfusion/: CMakeLists.txt  conv_fusion.cpp  conv_fusion.h  fusion_ops.h
torch_gcu/csrc/aten/: CMakeLists.txt  GCUNativeFunctions.cpp  RegisterLinearOverrideGCU.cpp  RegisterSPDA.cpp  VariableFallbackKernel.cpp  aten_cpu_fallback.cpp  aten_cpu_fallback.h  foreach_op_utils.cpp  gcu_autocast_ops.cpp  gcu_conv_determine_backend_memory_format.cpp  gcu_conv_determine_backend_memory_format.h  interface_ops.cpp  interface_ops.h  op_debug_config.cpp  op_debug_config.h  op_statistics.cpp  op_statistics.h  register_fallback_ops.cpp  register_fallback_ops.h  torch_log_block.h
torch_gcu/csrc/aten/aot_ops/: _fused_adamw_.cpp  gcu_activation.cpp  gcu_attention.cpp  gcu_attention.h  gcu_batch_norm.cpp  gcu_binary_ops.cpp  gcu_complex_helper.cpp  gcu_copy.cpp  gcu_distributions.cpp  gcu_dropout.cpp  gcu_empty_tensor.cpp  gcu_empty_tensor.h  gcu_equal.cpp  gcu_foreach_binary_ops.cpp  gcu_foreach_pointwise_ops.cpp  gcu_index_kernel.cpp  (+26 more)
torch_gcu/csrc/distributed/: CMakeLists.txt  ECCLUtils.cpp  ECCLUtils.hpp  ProcessGroupECCL.cpp  ProcessGroupECCL.hpp
torch_gcu/csrc/efficient_ops/: CMakeLists.txt  ops.cpp  ops.h
torch_gcu/csrc/gcu/: CMakeLists.txt  cpp_frame_info.cpp  cpp_frame_info.h  gcu_allocator_config.cpp  gcu_allocator_config.h  gcu_caching_allocator.cpp  gcu_caching_allocator.h  gcu_caching_host_allocator.cpp  gcu_caching_host_allocator.h  gcu_common.cpp  gcu_common.h  gcu_context.cpp  gcu_context.h  gcu_custom_api.cpp  gcu_custom_api.h  gcu_device.h  gcu_event.cpp  gcu_event.h  gcu_exception.cpp  gcu_exception.h  gcu_functions.cpp  gcu_functions.h  gcu_generator_impl.cpp  gcu_generator_impl.h  gcu_graph.cpp  gcu_graph.h  gcu_graphs_c10_utils.h  gcu_graphs_utils.h  gcu_guard.h  gcu_guard_impl.cpp  gcu_guard_impl.h  gcu_hardware.cpp  gcu_hardware.h  gcu_hooks.cpp  gcu_hooks.h  gcu_macros.h  gcu_malloc_async_allocator.cpp  gcu_misc_functions.cpp  gcu_misc_functions.h  gcu_peer_to_peer_access.cpp  (+19 more)
torch_gcu/csrc/profiler/: CMakeLists.txt  api.h  collection.cpp  collection.h  combined_traceback.cpp  combined_traceback.h  containers.h  data_flow.cpp  data_flow.h  events.h  kineto_client_interface.cpp  kineto_shim.cpp  kineto_shim.h  perf-inl.h  perf.cpp  perf.h  util.cpp  util.h
torch_gcu/csrc/python/: CMakeLists.txt  cpp_frame.cpp  cpp_frame.h  dist_py_init.cpp  dist_py_init.h  efficient_ops.cpp  efficient_ops.h  env.cpp  env.h  extra_ops.cpp  extra_ops.h  gcu_fusion_op.cpp  gcu_fusion_op.h  gcu_ipc_types.cpp  gcu_ipc_types.h  gcu_launch_host_func.cpp  gcu_launch_host_func.h  gcu_memory_snapshot.cpp  gcu_memory_snapshot.h  gcu_module.cpp  gcu_module.h  gcu_py_event.cpp  gcu_py_event.h  gcu_py_graph.cpp  gcu_py_graph.h  gcu_py_stream.cpp  gcu_py_stream.h  gcu_rt.cpp  gcu_storage_sharing.cpp  gcu_storage_sharing.h  gcu_tensor_type.cpp  gcu_tensor_type.h  gcu_topstx.cpp  op_debug_py_interface.cpp  op_debug_py_interface.h  python_frame.cpp  python_frame.h  pythoncapi_compat.h  storage_narrow.cpp  storage_narrow.h  (+4 more)
torch_gcu/distributed/: __init__.py  distributed_c10d.py  launch.py
torch_gcu/distributed/checkpoint/: filesystem.py
torch_gcu/gcu/: __init__.py  _utils.py  autocast_utils.py  debug.py  graphs.py  memory.py  overrides.py  random.py  reductions.py  storage.py  storage_narrow.py  streams.py  topstx.py  tunable.py
torch_gcu/gcu/_prims/: __init__.py  rng_prims.py
torch_gcu/gcu/amp/: __init__.py  autocast_mode.py  common.py  grad_scaler.py
torch_gcu/gcu/autograd/: __init__.py  profiler.py  profiler_util.py
torch_gcu/gcu/efficient/: __init__.py  op.py
torch_gcu/gcu/inductor/: backend_register.py
torch_gcu/gcu/profiler/: __init__.py  _memory_profiler.py  _pattern_matcher.py  _utils.py  profiler.py
(+176 files in other folders)
